2011-05-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-08-04
        * Protect DEBUG messages.

2011-05-05  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
	* Tag as TrigT1CaloMonitoring-00-08-03
        * JobOptions update.

2011-05-02  Ivana Hristova <ivana.hristova@cern.ch>
	* Tag as TrigT1CaloMonitoring-00-08-02
	* PPrMon: Replace ThreshMax with ThreshVec.
	* A list of PPM LUT thresholds can be set in joboptions.

2011-04-18  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-08-01
        * Efficiency updates.

2011-04-13 Rohin T Narayan <narayan@physi.uni-heidelberg.de>
		* Included class PPrStability Mon

2011-03-29  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-16
        * More Coverity fixes.

2011-03-15  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-15
        * Coverity fixes.

2011-02-28  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-14
        * Clearer plots with ROB errors.

2011-02-09  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-13
        * Allow for new treatment of Et overflow.

2011-01-21  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-12
        * Updates for MissingEtSig.

2010-12-21  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-11
        * Updates to TrigT1CaloLWHistogramTool.
        * Remove obsolete MonHelper.

2010-12-02  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-10
        * Take full account of LimitedRoISet bit.

2010-11-30  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-09
        * PPrMon: Bugfix.

2010-11-29  Peter Faulkner <pjwf@hep.ph.bham.ac.uk>
        * Tag as TrigT1CaloMonitoring-00-07-08
        * PPrMon: Fix minor bugs in procHistograms.
